examples/test/testpolicy4843.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4843
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key41: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value26
          key38: value7
      podSelector:
        matchLabels:
          key45: value17
          key18: value7
